projects gaps and erratas fixed

--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -576,18 +576,18 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-auto-rows: minmax(min-content, max-content);
-  grid-gap: 2rem;
+  grid-gap: 4rem;
   margin: 5rem; }
 
 .project-item {
   display: grid;
   grid-template-rows: min-content min-content min-content;
-  grid-gap: 3rem; }
+  grid-gap: 1.5rem; }
 
 .project-title {
   grid-row: 1/2;
   margin: 0 auto;
-  color: #FFFFFF;
+  color: goldenrod;
   font-size: 3.5rem; }
 
 /*
@@ -627,7 +627,7 @@ body {
     background-color: rgba(0, 0, 0, 0.9);
     color: white;
     opacity: 1;
-    box-shadow: 0px 0px 10px 10px grey; }
+    box-shadow: 0px 0px 10px 2px #111111; }
   .project-techs__text {
     text-align: center; }
 
@@ -639,7 +639,7 @@ body {
 
 .project-description {
   grid-row: 3/4;
-  font-size: 2.6rem;
+  font-size: 1.6rem;
   text-align: center; }
 
 /*
