--- a/portfolio/src/sass/_projects.scss
+++ b/portfolio/src/sass/_projects.scss
@@ -12,7 +12,7 @@
     display:grid;
     grid-template-columns: 1fr 1fr;
     grid-auto-rows: minmax(min-content, max-content);
-    grid-gap: 2rem;
+    grid-gap: 4rem;
     margin: 5rem;
 }
 
@@ -21,14 +21,14 @@
     display:grid;
     grid-template-rows: min-content min-content min-content;
     //justify-items: center;
-    grid-gap : 3rem;
+    grid-gap : 1.5rem;
 }
 
 .project-title{
     grid-row: 1/2;
     //background-color: blue;
     margin: 0 auto;
-    color: $color-white;
+    color: $color-yellow;
     font-size: 3.5rem;
 }
 /*
@@ -79,7 +79,7 @@
         background-color: rgba(0, 0, 0, 0.9);        
         color: white;
         opacity: 1;
-        box-shadow: 0px 0px 10px 10px grey;
+        box-shadow: 0px 0px 10px 2px rgb(17, 17, 17);
 
 
     }
@@ -105,7 +105,7 @@
 .project-description {
     grid-row: 3/4;
     //background-color: bisque;
-    font-size:2.6rem;
+    font-size:1.6rem;
     text-align: center;
 }
 /*
